[gd_scene load_steps=7 format=3 uid="uid://droq5mpdru2bs"]

[ext_resource type="FontFile" uid="uid://c2nvekmrvmbwg" path="res://Assets/Fonts/Daydream DEMO.otf" id="1_1s22t"]
[ext_resource type="Script" path="res://Scripts/button.gd" id="2_uyvdl"]
[ext_resource type="Script" uid="uid://bvhnxbgbmbp2u" path="res://Scripts/score_labels.gd" id="3_knw1t"]

[sub_resource type="LabelSettings" id="LabelSettings_uyvdl"]
font_size = 64
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_ohvpv"]
font = ExtResource("1_1s22t")
font_size = 32
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_1iub3"]
font_size = 32
outline_color = Color(0, 0, 0, 1)

[node name="SuccessMenu" type="Control"]
layout_mode = 3
anchors_preset = 0

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -238.0
offset_top = 135.0
offset_right = 239.0
offset_bottom = 225.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0.2784314, 0.54509807, 1)
theme_override_constants/outline_size = 16
theme_override_fonts/font = ExtResource("1_1s22t")
theme_override_font_sizes/font_size = 32
text = "Play again"
flat = true
script = ExtResource("2_uyvdl")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -354.0
offset_top = -74.0
offset_right = 354.0
offset_bottom = 74.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(305, 0)
theme_override_colors/font_color = Color(0, 0.54901963, 0, 1)
theme_override_fonts/font = ExtResource("1_1s22t")
theme_override_font_sizes/font_size = 64
text = "Success!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = -556.0
offset_top = -194.0
offset_right = -216.0
offset_bottom = 169.0
alignment = 1
script = ExtResource("3_knw1t")

[node name="ScoresLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_1s22t")
text = "Top 5"
label_settings = SubResource("LabelSettings_uyvdl")
horizontal_alignment = 1

[node name="ScoreLabel0" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_1s22t")
text = "-"
label_settings = SubResource("LabelSettings_ohvpv")
horizontal_alignment = 1

[node name="ScoreLabel1" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_1s22t")
text = "-"
label_settings = SubResource("LabelSettings_1iub3")
horizontal_alignment = 1

[node name="ScoreLabel2" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_1s22t")
text = "-"
label_settings = SubResource("LabelSettings_1iub3")
horizontal_alignment = 1

[node name="ScoreLabel3" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_1s22t")
text = "-"
label_settings = SubResource("LabelSettings_1iub3")
horizontal_alignment = 1

[node name="ScoreLabel4" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_1s22t")
text = "-"
label_settings = SubResource("LabelSettings_1iub3")
horizontal_alignment = 1

[node name="ClearScoresButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0.007843138, 0.007843138, 0.007843138, 1)
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("1_1s22t")
theme_override_font_sizes/font_size = 32
text = "Clear
"
flat = true

[connection signal="button_down" from="Button" to="Button" method="_on_button_down"]
[connection signal="pressed" from="VBoxContainer/ClearScoresButton" to="VBoxContainer" method="_on_clear_scores_button_pressed"]
